--- a/build.yaml
+++ b/build.yaml
@@ -15,6 +15,7 @@
 include:
   - board: nice_nano_v2
     shield: dac_man_5x6_left
+    snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: dac_man_5x6_right
   - board: nice_nano_v2
