add azotec debug to conf file.

--- a/config/boards/shields/dac_man_5x6/dac_man_5x6.conf
+++ b/config/boards/shields/dac_man_5x6/dac_man_5x6.conf
@@ -1,1 +1,19 @@
+# Basic ZMK settings (adjust as needed)
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
+
+# Enable input subsystem (needed for pointing device)
+CONFIG_INPUT=y
+
+# Enable the Azoteq IQS550 driver
+CONFIG_AZOTEQ_IQS550=y
+
+# --- Optional: Enable Logging for Debugging ---
+CONFIG_LOG=y
+CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_LOG_BACKEND_UART=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_AZOTEQ_IQS550_LOG_LEVEL_DBG=y
+# --- End Optional Logging ---
