--- a/build.yaml
+++ b/build.yaml
@@ -17,5 +17,6 @@ include:
     shield: dac_man_5x6_left
   - board: nice_nano_v2
     shield: dac_man_5x6_right
+    snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: settings_reset
