--- a/config/dac_man_5x6.conf
+++ b/config/dac_man_5x6.conf
@@ -5,4 +5,5 @@
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_USB_LOGGING=y
+CONFIG_AZOTEQ_IQS550_LOG_LEVEL_DBG=y
 CONFIG_LOG_DEFAULT_LEVEL=2
