add log option in shield

--- a/config/boards/shields/dac_man_5x6/dac_man_5x6.conf
+++ b/config/boards/shields/dac_man_5x6/dac_man_5x6.conf
@@ -8,4 +8,11 @@ CONFIG_INPUT=y
 
 # Enable the Azoteq IQS550 driver
 CONFIG_AZOTEQ_IQS550=y
+
+# log option
+CONFIG_LOG=y
+CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_LOG_BACKEND_UART=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
 CONFIG_AZOTEQ_IQS550_LOG_LEVEL_DBG=y
