--- a/config/dac_man_5x6.conf
+++ b/config/dac_man_5x6.conf
@@ -5,4 +5,9 @@
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_USB_LOGGING=y
-CONFIG_LOG_DEFAULT_LEVEL=2
+CONFIG_LOG_DEFAULT_LEVEL=4
+
+# Enable AZOTEQ IQS550 Touchpad
+CONFIG_AZOTEQ_IQS550=y
+CONFIG_AZOTEQ_IQS550_LOG_LEVEL_DBG=y
+CONFIG_I2C=y
