fix build error

--- a/config/dac_man_5x6.conf
+++ b/config/dac_man_5x6.conf
@@ -10,4 +10,8 @@ CONFIG_LOG_DEFAULT_LEVEL=4
 # Enable AZOTEQ IQS550 Touchpad
 CONFIG_AZOTEQ_IQS550=y
 CONFIG_AZOTEQ_IQS550_LOG_LEVEL_DBG=y
+
+# I2C Configuration
 CONFIG_I2C=y
+CONFIG_I2C_NRFX=y
+CONFIG_I2C_0=y
