fix build error and redefind sensor

--- a/config/dac_man_5x6.conf
+++ b/config/dac_man_5x6.conf
@@ -7,11 +7,17 @@
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 
-# Enable AZOTEQ IQS550 Touchpad
-CONFIG_AZOTEQ_IQS550=y
-CONFIG_AZOTEQ_IQS550_LOG_LEVEL_DBG=y
-
 # I2C Configuration
 CONFIG_I2C=y
 CONFIG_I2C_NRFX=y
-CONFIG_I2C_0=y
+
+# Input Configuration
+CONFIG_ZMK_MOUSE=y
+CONFIG_INPUT=y
+CONFIG_INPUT_TOUCHPAD=y
+CONFIG_SENSOR=y
+
+# Enable IQS550 Driver
+CONFIG_ZMK_SENSOR_DRIVERS=y
+CONFIG_SENSOR_INIT_PRIORITY=75
+CONFIG_IQS550=y
