--- a/config/drivers/sensor/iqs550/Kconfig
+++ b/config/drivers/sensor/iqs550/Kconfig
@@ -1,47 +1,64 @@
 # Copyright (c) 2024 The ZMK Contributors
 # SPDX-License-Identifier: Apache-2.0
 
-config AZOTEQ_IQS550
+menuconfig IQS550
 	bool "Azoteq IQS550 Touchpad Driver"
 	default n
+	depends on DT_HAS_AZOTEQ_IQS550_ENABLED
 	select INPUT
 	select I2C
 	select GPIO
-	select LOG
-	select POINTING_DEVICE
+	select SENSOR
 	help
 	  Enable the driver for the Azoteq IQS550 touchpad sensor.
 	  This sensor provides XY coordinates and touch status via I2C.
 
-if AZOTEQ_IQS550
+if IQS550
 
-config AZOTEQ_IQS550_LOG_LEVEL_ERR
+config IQS550_INIT_PRIORITY
+	int "Init priority"
+	default 75
+	help
+	  Device driver initialization priority.
+
+choice IQS550_LOG_LEVEL
+	prompt "Driver log level"
+	default IQS550_LOG_LEVEL_WRN
+	depends on LOG
+
+config IQS550_LOG_LEVEL_OFF
+	bool "Off"
+	help
+	  Do not write any driver log messages.
+
+config IQS550_LOG_LEVEL_ERR
 	bool "Error"
-	select LOG_LEVEL_ERR
-	select LOG_LEVEL_SET
+	help
+	  Write only error messages.
 
-config AZOTEQ_IQS550_LOG_LEVEL_WRN
+config IQS550_LOG_LEVEL_WRN
 	bool "Warning"
-	select LOG_LEVEL_WRN
-	select LOG_LEVEL_SET
+	help
+	  Write only warning and error messages.
 
-config AZOTEQ_IQS550_LOG_LEVEL_INF
+config IQS550_LOG_LEVEL_INF
 	bool "Info"
-	select LOG_LEVEL_INF
-	select LOG_LEVEL_SET
+	help
+	  Write info, warning, and error messages.
 
-config AZOTEQ_IQS550_LOG_LEVEL_DBG
+config IQS550_LOG_LEVEL_DBG
 	bool "Debug"
-	select LOG_LEVEL_DBG
-	select LOG_LEVEL_SET
+	help
+	  Write debug, info, warning, and error messages.
 
-config AZOTEQ_IQS550_LOG_LEVEL
-	string "Log level"
-	default "ERR" if AZOTEQ_IQS550_LOG_LEVEL_ERR
-	default "WRN" if AZOTEQ_IQS550_LOG_LEVEL_WRN
-	default "INF" if AZOTEQ_IQS550_LOG_LEVEL_INF
-	default "DBG" if AZOTEQ_IQS550_LOG_LEVEL_DBG
-	default "ERR"
+endchoice
 
-endif # AZOTEQ_IQS550
+config IQS550_LOG_LEVEL
+	int
+	default 0 if IQS550_LOG_LEVEL_OFF
+	default 1 if IQS550_LOG_LEVEL_ERR
+	default 2 if IQS550_LOG_LEVEL_WRN
+	default 3 if IQS550_LOG_LEVEL_INF
+	default 4 if IQS550_LOG_LEVEL_DBG
 
+endif # IQS550
