fix error in build

--- a/config/dac_man_5x6.conf
+++ b/config/dac_man_5x6.conf
@@ -11,13 +11,6 @@ CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_I2C=y
 CONFIG_I2C_NRFX=y
 
-# Input Configuration
-CONFIG_ZMK_MOUSE=y
-CONFIG_INPUT=y
-CONFIG_INPUT_TOUCHPAD=y
+# Sensor Configuration
 CONFIG_SENSOR=y
-
-# Enable IQS550 Driver
-CONFIG_ZMK_SENSOR_DRIVERS=y
-CONFIG_SENSOR_INIT_PRIORITY=75
-CONFIG_IQS550=y
+CONFIG_ZMK_MOUSE=y
