--- a/config/drivers/sensor/iqs550/CMakeLists.txt
+++ b/config/drivers/sensor/iqs550/CMakeLists.txt
@@ -1,7 +1,8 @@
 # Copyright (c) 2024 The ZMK Contributors
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library()
-
-zephyr_library_sources(iqs550.c)
-
+if(CONFIG_IQS550)
+    zephyr_library()
+    zephyr_library_sources(iqs550.c)
+    zephyr_include_directories(.)
+endif()
