--- a/build.yaml
+++ b/build.yaml
@@ -18,6 +18,7 @@ include:
     # snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: dac_man_5x6_right
+    artifact-name: test_name
     # snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: settings_reset
