--- a/config/boards/shields/dac_man_5x6/dac_man_5x6.conf
+++ b/config/boards/shields/dac_man_5x6/dac_man_5x6.conf
@@ -3,16 +3,20 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
 
-# Enable input subsystem (needed for pointing device)
+# --- Required: Enable I2C, GPIO, and Input subsystems ---
+CONFIG_I2C=y
+CONFIG_GPIO=y
 CONFIG_INPUT=y
+CONFIG_INPUT_POINTING_DEVICE=y
 
-# Enable the Azoteq IQS550 driver
-CONFIG_AZOTEQ_IQS550=y
+# --- Enable the Azoteq IQS-Manus Driver ---
+CONFIG_AZOTEQ_IQS_MANUS=y
 
-# log option
+# --- Enable Logging for Debugging ---
 CONFIG_LOG=y
 CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_LOG_BACKEND_UART=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
-CONFIG_AZOTEQ_IQS550_LOG_LEVEL_DBG=y
+CONFIG_AZOTEQ_IQS_MANUS_LOG_LEVEL=4
+# --- End Optional Logging ---
