--- a/config/drivers/sensor/iqs550/CMakeLists.txt
+++ b/config/drivers/sensor/iqs550/CMakeLists.txt
@@ -1,4 +1,7 @@
 # Copyright (c) 2024 The ZMK Contributors
 # SPDX-License-Identifier: Apache-2.0
 
-add_subdirectory(drivers)
+zephyr_library()
+
+zephyr_library_sources(iqs550.c)
+
