--- a/modules/drivers/zmk_azoteq_manus_driver/west-module.yml
+++ b/modules/drivers/zmk_azoteq_manus_driver/west-module.yml
@@ -1,4 +1,3 @@
-# west-module.yml for zmk_azoteq_manus_driver
-manifest:
-  build:
-    cmake: zephyr # Tells west this is a Zephyr CMake module
+# This file is intentionally empty
+# The module is discovered by west through the directory structure
+# and CMakeLists.txt files, not through this manifest
