--- a/config/boards/shields/dac_man_5x6/dac_man_5x6.conf
+++ b/config/boards/shields/dac_man_5x6/dac_man_5x6.conf
@@ -1,1 +1,9 @@
 CONFIG_ZMK_SLEEP=y
+# enable i2c
+CONFIG_I2C=y
+
+# IQS5XX
+CONFIG_IQS5XX=y
+CONFIG_IQS5XX_THREAD_PRIORITY=100
+CONFIG_IQS5XX_INTERRUPT=y
+#CONFIG_IQS5XX_POLL=y
