--- a/build.yaml
+++ b/build.yaml
@@ -14,7 +14,7 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: dac_man_5x6_left
+    shield: corne_left
     snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: dac_man_5x6_right
