remove logging from build and add it to shield.

--- a/build.yaml
+++ b/build.yaml
@@ -14,8 +14,7 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
-    snippet: zmk-usb-logging
+    shield: dac_man_5x6_left
   - board: nice_nano_v2
     shield: dac_man_5x6_right
   - board: nice_nano_v2
