--- a/config/boards/shields/dac_man_5x6/dac_man_5x6.conf
+++ b/config/boards/shields/dac_man_5x6/dac_man_5x6.conf
@@ -8,3 +8,28 @@ CONFIG_IQS5XX_THREAD_PRIORITY=100
 CONFIG_IQS5XX_INTERRUPT=y
 #CONFIG_IQS5XX_POLL=y
 CONFIG_ZMK_USB_LOGGING=y
+
+# --- Enable Core Logging System ---
+CONFIG_LOG=y
+CONFIG_LOG_MODE_IMMEDIATE=y # Or CONFIG_LOG_MODE_DEFERRED=y if preferred
+
+# --- Enable USB Logging Backend ---
+# Ensure this is enabled if you want logs over the main USB connection
+CONFIG_LOG_BACKEND_USB=y
+# Alternatively, if you want logs over a separate UART connection:
+# CONFIG_LOG_BACKEND_UART=y
+# CONFIG_UART_CONSOLE=y
+
+# --- Set Log Levels (Increase for Debugging) ---
+# Set default log level (0=Off, 1=Error, 2=Warning, 3=Info, 4=Debug)
+CONFIG_LOG_DEFAULT_LEVEL=4
+
+# Set specific log level for your Azoteq driver
+# (Replace IQS5XX if your module name is different)
+CONFIG_LOG_AZOTEQ_IQS5XX_LEVEL=4
+
+# --- Ensure other necessary configs are present ---
+# CONFIG_SERIAL=y # Usually enabled by the board definition
+# CONFIG_USB_DEVICE_STACK=y # Usually enabled by the board definition
+# CONFIG_USB_DEVICE_LOGGING=y # Should be selected by CONFIG_LOG_BACKEND_USB
+# CONFIG_USB_CDC_ACM=y # Should be selected by CONFIG_LOG_BACKEND_USB
